bug fix spacing on submitted message

--- a/src/Styles/LikelyLoans/Carousel.scss
+++ b/src/Styles/LikelyLoans/Carousel.scss
@@ -12,6 +12,10 @@
     .swiper-container {
         margin: 0 auto;
         padding-top: 12px;
+        -webkit-user-select: none;
+           -moz-user-select: none;
+            -ms-user-select: none;
+                user-select: none;
         .swiper-wrapper {
             width: 100%;
             margin: 0 auto 10px auto;
@@ -37,6 +41,7 @@
                     background-image: $calendar-carousel;
                     background-size: 19.5vw 22vw;
                     background-repeat: no-repeat;
+                    -webkit-transition: margin $transition-250ms;
                     transition: margin $transition-250ms;
                 }
                 &#calendar-carousel-date-disabled {
@@ -56,7 +61,7 @@
     }
 }
 
-// mobile landscape
+/* mobile landscape*/
 @media(max-device-width: 992px) and(orientation: landscape) {
     .swiper-container .swiper-wrapper .swiper-slide {
         font-size: 25px;
@@ -70,6 +75,7 @@
             line-height: 75px;
             background-size: 65px 74px;
             height: 75px;
+            -webkit-transition: none;
             transition: none;
         }
         &#calendar-carousel-date-disabled {
@@ -126,6 +132,7 @@
                     line-height: 100px;
                     background-size: 87px 95px;
                     margin: -15px auto 0 auto;
+                    -webkit-transition: none;
                     transition: none;
                 }
                 &#calendar-carousel-date-disabled {
